--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,15 @@
-<h2>User info</h2>
-<%= render 'info', user: current_user %>
+<div class="row">
+  <div class="col-xs-3">
+    <h2>User info</h2>
+    <%= render 'info', user: current_user %>
+    <h2 class="mt-3">New book</h2>
+    <%= render 'books/form', book: @book %>
+  </div>
 
-<h2 class="mt-3">New book</h2>
-<%= render 'form', book: @book %>
+  <div class="col-xs-9">
+    <h2>Users</h2>
+    <%= render 'index',users: @users %>
+  </div>
+</div>
 
-<h2>Users</h2>
-<%= render 'index',users: @users %>
 
-！！！！！
