--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,7 +16,26 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-      </tr>
+        <!--kkkkkkkk-->
+        <td>
+          <% if book.favorited_by?(current_user) %>
+     <p>
+          <%= link_to favorite_path(book), method: :delete do %>
+            ♥<%= book.favorites.count %>
+          <% end %>
+     </p>
+          <% else %>
+     <p>
+          <%= link_to favorites_path(book), method: :post do %>
+            ♡<%= book.favorites.count %>
+          <% end %>
+    </p>
+         <% end %>
+      </td>
+    </tr>
     <% end %>
+
+
+
   </tbody>
 </table>
