--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -20,18 +20,19 @@
         <td>
           <% if book.favorited_by?(current_user) %>
      <p>
-          <%= link_to favorite_path(book), method: :delete do %>
+          <%= link_to book_favorites_path(book), method: :delete do %>
             ♥<%= book.favorites.count %>
           <% end %>
      </p>
           <% else %>
      <p>
-          <%= link_to favorites_path(book), method: :post do %>
+          <%= link_to book_favorites_path(book), method: :post do %>
             ♡<%= book.favorites.count %>
           <% end %>
-    </p>
+   　 </p>
          <% end %>
       </td>
+      <td><%= link_to "#{book.book_comments.count} コメント数", book_path(book.id) %></td>
     </tr>
     <% end %>
 
