--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,9 +20,43 @@
           <td><%= @book.body %></td>
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
-            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
+            <td><%= link_to 'Destroy', book_path, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
+            <td>
+
+          <% if @book.favorited_by?(current_user) %>
+     <p>
+            <%= link_to book_favorites_path(@book), method: :delete do %>
+              ♥<%= @book.favorites.count %>
+            <% end %>
+     </p>
+           <% else %>
+     <p>
+            <%= link_to book_favorites_path(@book), method: :post do %>
+              ♡<%= @book.favorites.count %>
+            <% end %>
+   　 </p>
+           <% end %>
+      </td>
           <% end %>
+          <td>コメント件数：<%= @book.book_comments.count %></td>
         </tr>
+        <!--kkkkkkkk-->
+
+  <% @book.book_comments.each do |book_comment| %>
+<tr>
+    <td><%= image_tag book_comment.user.get_profile_image, size:"50x50" %></td>
+    <td><%= book_comment.user.name %></td>
+    <td><%= book_comment.comment %></td>
+    <td><%= link_to "Destroy", book_book_comment_path(@book, book_comment), method: :delete, class: "btn btn-danger pull-right" %></td>
+</tr>
+  <% end %>
+
+<div>
+ <td> <%= form_with model: [@book, @book_comment] do |f| %>
+    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+    <%= f.submit "送信する" %>
+  <% end %>
+ </td>
       </table>
     </div>
   </div>
