--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -7,9 +7,31 @@
   <tr>
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
+	  <% if users.exists? %>
+        <tr>
+          <th>follows:</th>
+          <th>
+            <%= link_to user_followings_path do %>
+              <%= user.followings.count %>
+            <% end %>
+          </th>
+        </tr>
+        <tr>
+          <th>followers:</th>
+          <th>
+            <%= link_to user_followers_path do %>
+            　<%= user.followers.count %>
+            <% end %>
+          </th>
+        </tr>
+    <% else %>
+      <p>ユーザーはいません</p>
+    <% end %>
+
   </tr>
 </table>
-　
+
+
 <div class='row'>
   <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block edit_user_#{user.id}" do %>
     <i class="fas fa-user-cog"></i>
