--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -19,10 +19,12 @@
       <p>ユーザーはいません</p>
     <% end %>
          <td>
-            <% if current_user.following?(user) %>
-              <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
-            <% else %>
-              <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+            <% unless user == current_user %>　
+              <% if current_user.following?(user) %>
+                <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+              <% else %>
+                <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+              <% end %>
             <% end %>
          </td>
         <td><%= link_to 'Show', user, class: "user_#{user.id}" %></td>
