--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -11,17 +11,13 @@
         <tr>
           <th>follows:</th>
           <th>
-            <%= link_to user_followings_path do %>
-              <%= user.followings.count %>
-            <% end %>
+            <%= link_to user.followings.count, user_followings_path(user) %>
           </th>
         </tr>
         <tr>
           <th>followers:</th>
           <th>
-            <%= link_to user_followers_path do %>
-            　<%= user.followers.count %>
-            <% end %>
+            <%= link_to user.followers.count, user_followers_path(user) %>
           </th>
         </tr>
     <% else %>
@@ -33,7 +29,11 @@
 
 
 <div class='row'>
-  <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block edit_user_#{user.id}" do %>
-    <i class="fas fa-user-cog"></i>
+  <% if current_user != user %>
+    <td><%= render "relationships/btn", user: user %></td>
+  <% else %>
+    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block edit_user_#{user.id}" do %>
+      <i class="fas fa-user-cog"></i>
+    <% end %>
   <% end %>
 </div>
